...
        return imageView
    }()
    
    private lazy var tapView: UIControl = {
        let control = UIControl()
        control.addTarget(self, action: #selector(currencySelectionTapped(_:)), for: .touchUpInside)
        control.accessibilityIdentifier = "CurrencySelectionStackView_tapView"
        return control
    }()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        setupView()
...
